# mplug

./: .pylintrc  README.md  generated.txt  mplug  mplug.py  noxfile.py  pyproject.toml  run.py  test_mplug.py
.github/workflows/: codeql-analysis.yml  port-to-py35.yml  release.yml  test-pypi.yml  tests.yml
src/mplug/: __init__.py  download.py  interaction.py  mplug.py  util.py
test/: test_cli.py  test_interaction.py  test_mplug.py  test_util.py
