[tool.poetry]
name = "mplug"
version = "0.1.0"
description = "A plugin manager for mpv"
authors = ["Michael F. Schönitzer <michael@schoenitzer.de>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6"
GitPython = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-mock = "^3.3.0"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
mplug = "mplug:run"
